(library
 (name trust_system_unix)
 (public_name trust_system.unix)
 (libraries
   ;; opam libraries
   graphql-async
   yojson
   ;; local libraries
   graphql_basic_scalars
   trust_system

 )
 (preprocess (pps ppx_version))
 (instrumentation (backend bisect_ppx))
 (synopsis "Utils that depends on the unix library"))
